<resources>
    <string name="app_name">GamifiedStepCounterApp</string>

    <string name="nameSurname">Name Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginAllCaps">LOGIN</string>
    <string name="registerAllCaps">REGISTER</string>
    <string name="social">Social</string>
    <string name="comments">Comments</string>
    <string name="newPost">New Post</string>
    <string name="postContent">Post Content</string>
    <string name="postImage">Post Image</string>
    <string name="shareAllCaps">SHARE</string>
    <string name="ranking">Ranking</string>
    <string name="today">Today</string>
    <string name="streak">STREAK</string>
    <string name="avgSteps">AVG STEPS</string>
    <string name="contents">Contents</string>
    <string name="comment">Comment</string>
    <string name="send">SEND</string>
    <string name="days">days</string>
    <string name="steps">steps</string>

</resources>