<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen_50">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/step_icon_filled"
        app:tint="@color/colorBrown_900" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/email"
                android:textColor="@color/colorBrown_900"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/rounded_shape_color_white_bordered_brown_900_rad_5"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorBrown_900"
                android:textColorHint="@color/colorBrown_900_Opa50"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/password"
                android:textColor="@color/colorBrown_900"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/rounded_shape_color_white_bordered_brown_900_rad_5"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorBrown_900"
                android:textColorHint="@color/colorBrown_900_Opa50"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/loginRL"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_shape_color_brown_900_rad_5">

            <TextView
                android:id="@+id/loginBtnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/loginAllCaps"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/loginBtnPB"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/registerRL"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_shape_color_white_bordered_brown_900_rad_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/registerAllCaps"
                android:textColor="@color/colorBrown_900"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>