<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen_50">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/slidingUpPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:umanoDragView="@id/dragView"
        app:umanoOverlay="true"
        app:umanoPanelHeight="0dp"
        app:umanoParallaxOffset="0dp"
        app:umanoShadowHeight="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/headerRL"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/colorGreen_600_Opa10">

                <RelativeLayout
                    android:id="@+id/infoRL"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_shape_color_green_600_rad_5">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/profilePhotoIV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avatar_5"
                        app:riv_corner_radius="200dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/profilePhotoIV"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/fire_icon" />

                            <TextView
                                android:id="@+id/streakCountTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/quicksand_semibold"
                                android:text="48"
                                android:textColor="@color/white"
                                android:textSize="9sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/quicksand_regular"
                                android:text="@string/days"
                                android:textColor="@color/white"
                                android:textSize="7sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/foots_icon" />

                            <TextView
                                android:id="@+id/avgStepCountTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/quicksand_semibold"
                                android:text="9874"
                                android:textColor="@color/white"
                                android:textSize="9sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/quicksand_regular"
                                android:text="@string/steps"
                                android:textColor="@color/white"
                                android:textSize="7sp" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/contents"
                    android:textColor="@color/colorGreen_600"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorGreen_600" />

                <RelativeLayout
                    android:id="@+id/coinRL"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/logoutRL">

                    <ImageView
                        android:id="@+id/coinIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/coin_icon"
                        app:tint="@color/colorGreen_600" />

                    <TextView
                        android:id="@+id/coinTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/coinIcon"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="12"
                        android:textColor="@color/colorGreen_600"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/logoutRL"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/logout_icon"
                        app:tint="@color/colorGreen_600" />

                </RelativeLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/headerRL"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="15dp"
                android:scrollbars="none"
                tools:listitem="@layout/child_item_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fragmentContainerFL"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

        </RelativeLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>